# Product-Rental-API

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0843855e4b3f_rental_period_table.py  22b9607cd0b7_initial_migration.py  34df1cefc18c_region_table_addition.py  4912b53fdf39_product_pricing.py
app/: container.py  server.py
app/api/v1/: attribute.py  attribute_values.py  health.py  product.py  product_pricing.py  region.py  rental_period.py  routes.py
app/api/v1/dependency/: attribute_values.py  product_pricing.py
app/api/v1/dto/: attribute.py  attribute_values.py  product.py  product_pricing.py  region.py  rental_period.py
app/domain/data/: attribute.py  attribute_values.py  product.py  product_pricing.py  region.py  rental_period.py
app/domain/repository/db/: attribute.py  attribute_values.py  product.py  product_pricing.py  region.py  rental_period.py
app/domain/usecases/: create_attribute.py  create_attribute_values.py  create_product.py  create_product_pricing.py  create_region.py  create_rental_period.py  get_attribute.py  get_attribute_list.py  get_product.py  get_products_list.py  get_region.py  get_regions_list.py  get_rental_period.py  get_rental_period_list.py
app/infra/: config.py
app/repository/db/: attribute.py  attribute_values.py  product.py  product_pricing.py  region.py  rental_period.py
app/repository/db/schema/: attribute.py  attribute_values.py  product.py  product_pricing.py  region.py  rental_period.py
app/shared/infra/: database.py
app/shared/utils/: custom_json_serializer.py
(+5 files in other folders)
