[tool.poetry]
name = "cinch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
pydantic = "^2.0"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.15.1"
asgi-correlation-id = "^4.3.4"
dependency-injector = "^4.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
